--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <div class="container">
-          <a class="to-index" href="index.html">На главную</a>
+        <a class="to-index" href="index.html">На главную</a>
         <nav class="main-navigation">
           <ul>
             <li>
@@ -30,68 +30,50 @@
         <div class="user-block">
           <a class="login" href="#">Вход</a>
         </div>
-        </div>
-      </header>
-      <main class="container">
-        <h1>Набор для путешествий "Baxter of California"</h1>
-        <div class="breadcrumbs">
-          <ul>
-            <li>
-              <a href="index.html">Главная</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Средства для ухода</a>
-            </li>
-            <li>
-              <p>Набор для путешествий "Baxter of California"</p>
-            </li>
-          </ul>
-        </div>
-        <div class="photos">
-          <figure class="photos-all">
-            <div class="photos-all-1">
-                <a href="#">
-                    <img src="http://placehold.it/150x100" alt="">
-                </a>
-            </div>
-           <div class="photos-all-2">
-                <a href="#">
-                    <img src="http://placehold.it/150x100" alt="">
-                </a>
-            </div>
-            <div class="photos-all-3">
-                <a href="#">
-                    <img src="http://placehold.it/150x100" alt="">
-                </a>
-            </div>
-            <div class="photos-all-4">
-                <a href="#">
-                    <img src="http://placehold.it/150x100" alt="">
-                </a>
-            </div>
-          </figure>
-        </div>
-        <div class="description">
-          <p class="description-availability">Есть в наличии</p>
-          <p class="description-number">Артикул: Dexter-AE</p>
-          <p class="description-text">Travel Kit - необходимый акссесуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-          <p class="description-price">2 900 руб.</p>
-          <a href="#" class="description-buy">Купить</a>
-          <h2>В набор входят:</h2>
-          <ul>
-            <li>Средство для умывания (50 мл)</li>
-            <li>Увлажняющий крем (50 мл)</li>
-            <li>Крем для бритья (50 мл)</li>
-            <li>Крем после бритья (50 мл)</li>
-            <li>Шампунь (50 мл)</li>
-            <li>Удобная кожаная косметичка</li>
-          </ul>
-        </div>
-      </main>
-      <footer class="main-footer">
+      </div>
+    </header>
+    <main class="container">
+      <h1>Набор для путешествий "Baxter of California"</h1>
+      <div class="breadcrumbs">
+        <ul>
+          <li>
+            <a href="index.html">Главная</a>
+          </li>
+          <li>
+            <a href="#">Магазин</a>
+          </li>
+          <li>
+            <a href="#">Средства для ухода</a>
+          </li>
+          <li>
+            <p>Набор для путешествий "Baxter of California"</p>
+          </li>
+        </ul>
+      </div>
+      <figure class="photos-all">
+        <img src="http://placehold.it/150x100" width="250" height="170" alt="">
+        <img src="http://placehold.it/150x100" width="100" height="80" alt="">
+        <img src="http://placehold.it/150x100" width="100" height="80" alt="">
+        <img src="http://placehold.it/150x100" width="100" height="80" alt="">
+      </figure>
+      <div class="description">
+        <p class="description-availability">Есть в наличии</p>
+        <p class="description-number">Артикул: Dexter-AE</p>
+        <p class="description-text">Travel Kit - необходимый акссесуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+        <p class="description-price">2 900 руб.</p>
+        <a href="#" class="description-buy">Купить</a>
+        <h2>В набор входят:</h2>
+        <ul>
+          <li>Средство для умывания (50 мл)</li>
+          <li>Увлажняющий крем (50 мл)</li>
+          <li>Крем для бритья (50 мл)</li>
+          <li>Крем после бритья (50 мл)</li>
+          <li>Шампунь (50 мл)</li>
+          <li>Удобная кожаная косметичка</li>
+        </ul>
+      </div>
+    </main>
+    <footer class="main-footer">
       <div class="container">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
