--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,9 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <a class="to-index" href="index.html">На главную</a>
+        <a class="to-index" href="index.html">
+          <img src="http://placehold.it/150x100" width="100" height="40" alt="logo">
+        </a>
         <nav class="main-navigation">
           <ul>
             <li>
@@ -20,7 +22,7 @@
               <a href="#">Прайс-лист</a>
             </li>
             <li>
-              <a href="#">Магазин</a>
+              <a href="#" class="selected">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
@@ -43,7 +45,7 @@
             <a href="#">Магазин</a>
           </li>
           <li>
-            <a href="#">Средства для ухода</a>
+            <a href="#" class="chosen">Средства для ухода</a>
           </li>
         </ul>
       </div>
